syntax = "proto3";

option java_package = "app";
option java_multiple_files = true;

package app;

service Greeter {
  rpc sayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}